--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-*.sh text eol=crlf
+# Enforce consistent line endings for different file types
+# This helps prevent issues when working across different operating systems (Windows, macOS, Linux)
+
+*.sh text eol=lf
